--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3uikit/core": "^0.2.10",
+    "@web3uikit/icons": "^0.2.6",
+    "@web3uikit/web3": "^0.2.2",
     "moralis": "^1.8.0",
     "next": "12.1.5",
     "react": "18.0.0",
