--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@web3uikit/core": "^0.2.10",
     "@web3uikit/icons": "^0.2.6",
     "@web3uikit/web3": "^0.2.2",
+    "fs": "^0.0.1-security",
     "moralis": "^1.8.0",
     "next": "12.1.5",
     "react": "18.0.0",
